Added the coaches table to the database and fixed up some errors. Still have to fix it on the website data is not showing up

--- a/SoccerGame/appsettings.json
+++ b/SoccerGame/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GameContext": "Server=(localdb)\\mssqllocaldb;Database=GameContext-9fb59662-9230-4f97-910a-ff38bcaf25cc;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "GameContext": "Server=(localdb)\\mssqllocaldb;Database=GameContext-9fb59662-9230-4f97-910a-ff38bcaf25cc;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "CoachContext": "Server=(localdb)\\mssqllocaldb;Database=CoachContext-5de2d7fc-3d4f-48bb-ab52-9ad4e13b4165;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
